@@ -7,7 +7,7 @@ import com.dotcms.graphql.datafetcher.QueryMetadataDataFetcher;
 import com.dotmarketing.exception.DotDataException;
 import graphql.schema.GraphQLFieldDefinition;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.Set;
 
 /**
  * This FieldsProvider provides a "QueryMetadata" field which includes the totalCount of results
@@ -19,7 +19,7 @@ public enum QueryMetadataFieldProvider implements GraphQLFieldsProvider {
 
     @Override
     public Collection<GraphQLFieldDefinition> getFields() throws DotDataException {
-        return Collections.singleton(newFieldDefinition()
+        return Set.of(newFieldDefinition()
                 .name("QueryMetadata")
                 .type(list(QueryMetadataTypeProvider.INSTANCE.getTypes().iterator().next()))
                 .dataFetcher(new QueryMetadataDataFetcher()).build());
